--- a/seminario.bib
+++ b/seminario.bib
@@ -27,7 +27,6 @@ pages={1282},
   year={2014}
 }
 
-
 @article{baraffe2009physical,
   title={The physical properties of extra-solar planets},
   author={Baraffe, Isabelle and Chabrier, Gilles and Barman, Travis},
@@ -37,6 +36,17 @@ pages={1282},
   pages={016901},
   year={2009},
   publisher={IOP Publishing}
+}
+
+@article{ida1992n,
+  title={N-body simulation of gravitational interaction between planetesimals and a protoplanet: I. Velocity distribution of planetesimals},
+  author={Ida, Shigeru and Makino, Junichiro},
+  journal={Icarus},
+  volume={96},
+  number={1},
+  pages={107--120},
+  year={1992},
+  publisher={Elsevier}
 }
 
 @article{rafikov2006atmospheres,
@@ -60,6 +70,18 @@ pages={1282},
   year={2004},
   publisher={IOP Publishing}
 }
+
+@article{ikoma2000formation,
+  title={Formation of giant planets: dependences on core accretion rate and grain opacity},
+  author={Ikoma, Masahiro and Nakazawa, Kiyoshi and Emori, Hiroyuki},
+  journal={The Astrophysical Journal},
+  volume={537},
+  number={2},
+  pages={1013},
+  year={2000},
+  publisher={IOP Publishing}
+}
+
 
 @article{lissauer1993planet,
   title={Planet formation},
@@ -135,6 +157,25 @@ pages={1282},
   year={1997},
   publisher={Elsevier}
 }
+
+@article{safronov1972evolution,
+  title={Evolution of the protoplanetary cloud and formation of the earth and planets.},
+  author={Safronov, Viktor Sergeevich},
+  journal={Evolution of the protoplanetary cloud and formation of the earth and planets., by Safronov, VS. Translated from Russian. Jerusalem (Israel): Israel Program for Scientific Translations, Keter Publishing House, 212 p.},
+  year={1972}
+}
+
+
+@article{kokubo2012dynamics,
+  title={Dynamics and accretion of planetesimals},
+  author={Kokubo, Eiichiro and Ida, Shigeru},
+  journal={Progress of Theoretical and Experimental Physics},
+  volume={2012},
+  number={1},
+  year={2012},
+  publisher={Oxford University Press}
+}
+
 
 @article{weidenschilling1977distribution,
   title={The distribution of mass in the planetary system and solar nebula},
